# -Career-Counseling-System

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  deps.py  main.py  models_config.py  security.py
backend/app/agents/: assessor_agent.py  common.py  counselor_agent.py  discovery_agent.py  guardrails.py  interview_agent.py  jobmatch_agent.py  parser_agent.py  roadmap_agent.py  runtime.py
backend/app/routers/: assessment.py  auth.py  counselor.py  discovery.py  interview.py  jobs.py  overview.py  resume.py  roadmap.py
backend/app/schemas/: assessment.py  auth.py  counselor.py  discovery.py  interview.py  jobs.py  profile.py  roadmap.py
backend/app/seed/: curated_jobs.json
backend/app/services/: assessment_service.py  context_service.py  document.py  embeddings.py  jobs_service.py  profile_service.py  profile_text.py  roadmap_service.py  session_service.py
backend/scripts/: smoke_groq.py  test_parse.py
backend/tests/: test_basic.py
frontend/: package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts
frontend/src/app/core/: assessment.models.ts  assessment.service.ts  auth.guard.ts  auth.interceptor.ts  auth.service.ts  config.ts  counselor.models.ts  counselor.service.ts  discovery.models.ts  discovery.service.ts  interview.models.ts  interview.service.ts  jobs.models.ts  jobs.service.ts  models.ts  privacy.service.ts  profile.models.ts  profile.store.ts  resume.service.ts  roadmap.models.ts  roadmap.service.ts  sse.service.ts
(+22 files in other folders)
