[project]
name = "career-counselor-backend"
version = "0.1.0"
description = "AI-Native Career Counseling System — FastAPI + OpenAI Agents SDK (Groq)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai-agents>=0.2",
    "openai>=1.50",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "sqlalchemy>=2.0",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "fastembed>=0.3",
    "numpy>=1.26",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
